Fix Options logo and make the input text more readable.

--- a/client/css/options.css
+++ b/client/css/options.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-  background: url("/img/icon48.png") 0px 30px no-repeat;
+  background: url("/img/logo48.png") 0px 30px no-repeat;
   display: inline;
   margin: 0;
   padding-bottom: 43px;
@@ -41,6 +41,10 @@ a {
 p {
   margin: 0;
   padding: 0;
+}
+
+input {
+  width: 200px;
 }
 
 .extension-template {
